kubernetes/apps/storage/longhorn/app/kustomization-patch.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
  namespace: storage
spec:
  template:
    spec:
      containers:
        - name: longhorn-manager
          image: longhornio/longhorn-manager:v1.10.1-hotfix-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: storage
spec:
  template:
    spec:
      containers:
        - name: longhorn-driver-deployer
          image: longhornio/longhorn-manager:v1.10.1-hotfix-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: storage
spec:
  template:
    spec:
